force-app/main/default/objects/SMS_Brandname_Template__c/SMS_Brandname_Template__c.object-meta.xml
<CustomObject>
    <label>SMS Brandname Template</label>
    <nameField>
        <label>SMS Brandname Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Brandname Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>