force-app/main/default/objects/SMS_Brandname_Template__c/fields/CRM_CaseNo__c.field-meta.xml
<CustomField>
    <fullName>CRM_CaseNo__c</fullName>
    <label>CRM CaseNo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Sale Bike Process - Order</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Sale PCA Process - Order</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Survey Sending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>