force-app/main/default/objects/SMS_Brandname_Template__c/fields/IndexParamContent__c.field-meta.xml
<CustomField>
    <fullName>IndexParamContent__c</fullName>
    <label>Index Param Content</label>
    <type>TextArea</type>
</CustomField>