force-app/main/default/objects/SMS_Brandname_Template__c/fields/Label_ID__c.field-meta.xml
<CustomField>
    <fullName>Label_ID__c</fullName>
    <label>Label ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>