force-app/main/default/objects/SMS_Brandname_Template__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>CampaignMember</fullName>
            </value>
            <value>
                <fullName>SMS_History__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>