force-app/main/default/objects/SMS_Brandname_Template__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>