force-app/main/default/objects/SMS_Brandname_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_ID__c</columns>
    <columns>Label_ID__c</columns>
    <columns>IndexParamContent__c</columns>
    <columns>CRM_CaseNo__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>